--- a/sputnik-ui/src/index.html
+++ b/sputnik-ui/src/index.html
@@ -1,23 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Pasarela de pagos</title>
-    <base href="/">
+<head>
+  <meta charset="utf-8">
+  <title>Sputnik</title>
+  <base href="/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="assets/libreries/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/libreries/style.css">
-    <link href="assets/libreries/css.css?family=Lato" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/libreries/bootstrap.min.css" crossorigin="anonymous">
 
-    <script src="assets/libreries/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
-    <script src="assets/libreries/popper.min.js" crossorigin="anonymous"></script>
-    <script src="assets/libreries/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="assets/libreries/svg-with-js/js/fontawesome-all.js" crossorigin="anonymous"></script>
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">-->
+  <link rel="stylesheet" href="assets/libreries/style.css">
+  <!--Fonts-->
+  <link href="assets/libreries/css.css?family=Lato" rel="stylesheet">
 
-  </head>
-  <body>
-    <app-root></app-root>
-  </body>
+  <script src="assets/libreries/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
+  <script src="assets/libreries/popper.min.js" crossorigin="anonymous"></script>
+  <script src="assets/libreries/bootstrap.min.js" crossorigin="anonymous"></script>
+
+  <script src="assets/libreries/svg-with-js/js/fontawesome-all.js" crossorigin="anonymous"></script>
+
+</head>
+<body>
+  <app-root></app-root>
+</body>
 </html>
